--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,22 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(216, 225, 225);
+  padding-top: 80px;
+  
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+h1, h2, h3, h4, h5, h6, p, ul, ol {
+    margin: 0;
+}
+.list {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    text-decoration: none;
 }
